--- a/src/components/sections/header/cozy/style.module.scss
+++ b/src/components/sections/header/cozy/style.module.scss
@@ -21,7 +21,7 @@
 
   .bar {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     text-transform: lowercase;
     font-size: 12px;
     font-weight: 400;
@@ -34,8 +34,6 @@
     a {
       text-decoration: none;
       color: hsl(var(--foreground));
-      position: absolute;
-      left: 0;
     }
 
     .shopContainer {
